--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@tanstack/react-router-devtools": "^1.116.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.56.1",
+    "recharts": "^2.15.3",
     "sonner": "^2.0.3",
     "uuid": "^11.1.0"
   },
@@ -56,6 +58,8 @@
     "vitest": "^3.1.2"
   },
   "msw": {
-    "workerDirectory": ["public"]
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
