--- a/package.json
+++ b/package.json
@@ -12,49 +12,57 @@
     "preview": "vite preview",
     "test": "vitest"
   },
+  "imports": {
+    "#components/*": "./src/components/*",
+    "#contexts/*": "./src/contexts/*",
+    "#models/*": "./src/models/*",
+    "#mock/*": "./src/mock/*",
+    "#pages/*": "./src/pages/*",
+    "#routes/*": "./src/routes/*",
+    "#utils/*": "./src/utils/*",
+    "#services/*": "./src/services/*"
+  },
   "dependencies": {
-    "@tanstack/react-form": "^0.16.0",
-    "@tanstack/react-query": "^5.28.0",
-    "@tanstack/react-query-devtools": "^5.74.4",
-    "@tanstack/react-router": "^1.116.0",
-    "@tanstack/react-router-devtools": "^1.116.0",
-    "lucide-react": "^0.344.0",
-    "react": "^18.3.1",
-    "react-chartjs-2": "^5.3.0",
-    "react-dom": "^18.3.1",
-    "react-hook-form": "^7.56.1",
-    "recharts": "^2.15.3",
+    "@hookform/resolvers": "^5.0.1",
+    "@tanstack/react-query": "^5.75.2",
+    "@tanstack/react-query-devtools": "^5.75.2",
+    "@tanstack/react-router": "^1.119.0",
+    "@tanstack/react-router-devtools": "^1.119.1",
+    "lucide-react": "^0.507.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-hook-form": "^7.56.2",
     "sonner": "^2.0.3",
-    "uuid": "^11.1.0"
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
-    "@eslint/js": "^9.25.1",
-    "@tanstack/eslint-plugin-query": "^5.73.3",
-    "@tanstack/router-plugin": "^1.116.1",
+    "@eslint/js": "^9.26.0",
+    "@tanstack/eslint-plugin-query": "^5.74.7",
+    "@tanstack/router-plugin": "^1.119.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^29.5.14",
-    "@types/node": "^22.14.1",
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.18",
+    "@types/node": "^22.15.3",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.3",
+    "@vitejs/plugin-react": "^4.4.1",
+    "autoprefixer": "^10.4.21",
     "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.11",
-    "globals": "^15.15.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "globals": "^16.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jsdom": "^26.1.0",
     "msw": "^2.7.5",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^8.31.0",
-    "vite": "^5.4.2",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.31.1",
+    "vite": "^6.3.4",
     "vitest": "^3.1.2"
   },
   "msw": {
